# ModbusTestSlave

./: .coderabbit.yaml  .gitignore  .travis.yml  CMakeLists.txt  ModbusServer.pro  ModbusTestSlave.pro  README.md  appveyor.yml
.github/workflows/: ccpp.yml
Project_Files/: ModbusTestSlave.cbp  ModbusTestSlave.pro
doc/: build.md
inc/: libModbusSlaveTCP.h
libraries/libmodbus/: 0001-Added-WSACleanup-function-call-Windows-socket-API.patch
libraries/libmodbus/src/: modbus-rtu-private.h  modbus-tcp.c  modbus.c
misc/: ModbusSim.desktop
misc/icon/: LICENSE.txt
scripts/: build_linux.sh  build_unix_github.sh  build_windows.bat  build_windows_mingw.bat  deploy_linux.sh  deploy_windows.bat
src/: app_icon.rc  incgraph.cpp  incgraph.h  libModbusSlaveTCP.cpp  main.cpp  mainApp.cpp  mainApp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbusSlaveTCP.cpp  modbusSlaveTCP.h  pollQuit.cpp  pollQuit.h  registerdatamodel.cpp  registerdatamodel.h  registerstatemodel.cpp  registerstatemodel.h  sinegraph.cpp  sinegraph.h  workerThread.cpp  workerThread.h
testslave/: testslavedata.cpp  testslavedata.h  testslavemodbus.cpp  testslavemodbus.h
